--- a/index.html
+++ b/index.html
@@ -1788,7 +1788,7 @@
               <h2
                 class="mb-4 text-3xl font-bold text-dark sm:text-4xl md:text-[42px]"
               >
-                Happy Conductor Users
+                Companies use Conductor
               </h2>
             </div>
           </div>
@@ -1800,64 +1800,53 @@
             <div class="wow fadeInUp" data-wow-delay=".2s">
               <div class="ud-brands-logo flex flex-wrap items-center">
                 <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-
                     <img
-                      src="assets/images/brands/axp.svg"
+                      src="assets/images/brands/axp.png"
                       alt="American Express"
                       class="grayscale duration-300 hover:filter-none"
                     />
                 </div>
                 <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                  <a
-                    href="https://ayroui.com"
-                    target="_blank"
-                    rel="nofollow noopner"
-                  >
-                    <img
-                      src="assets/images/brands/ayroui.svg"
-                      alt="ayroui"
+                  <img
+                      src="assets/images/brands/tesla.png"
+                      alt="American Express"
                       class="grayscale duration-300 hover:filter-none"
-                    />
-                  </a>
+                  />
                 </div>
                 <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                  <a
-                    href="https://uideck.com"
-                    target="_blank"
-                    rel="nofollow noopner"
-                  >
-                    <img
-                      src="assets/images/brands/uideck.svg"
-                      alt="uideck"
-                      class="grayscale duration-300 hover:filter-none"
-                    />
-                  </a>
+                  <img
+                          src="assets/images/brands/chase.png"
+                          alt="American Express"
+                          class="grayscale duration-300 hover:filter-none"
+                  />
                 </div>
                 <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                  <a
-                    href="https://graygrids.com"
-                    target="_blank"
-                    rel="nofollow noopner"
-                  >
-                    <img
-                      src="assets/images/brands/graygrids.svg"
-                      alt="graygrids"
-                      class="grayscale duration-300 hover:filter-none"
-                    />
-                  </a>
+                  <img
+                          src="assets/images/brands/netflix.png"
+                          alt="American Express"
+                          class="grayscale duration-300 hover:filter-none"
+                  />
                 </div>
                 <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                  <a
-                    href="https://lineicons.com"
-                    target="_blank"
-                    rel="nofollow noopner"
-                  >
-                    <img
-                      src="assets/images/brands/lineicons.svg"
-                      alt="lineicons"
-                      class="grayscale duration-300 hover:filter-none"
-                    />
-                  </a>
+                  <img
+                          src="assets/images/brands/vmware.png"
+                          alt="American Express"
+                          class="grayscale duration-300 hover:filter-none"
+                  />
+                </div>
+                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                  <img
+                          src="assets/images/brands/tmobile.png"
+                          alt="American Express"
+                          class="grayscale duration-300 hover:filter-none"
+                  />
+                </div>
+                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
+                  <img
+                          src="assets/images/brands/github.png"
+                          alt="American Express"
+                          class="grayscale duration-300 hover:filter-none"
+                  />
                 </div>
               </div>
             </div>
