--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                   </li>
                   <li class="group relative">
                     <a
-                      href="#pricing"
+                      href="#faq"
                       class="ud-menu-scroll mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:mr-0 lg:ml-7 lg:inline-flex lg:py-6 lg:px-0 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-12"
                     >
-                      Pricing
+                      FAQ
                     </a>
                   </li>
                   <li class="group relative">
@@ -124,7 +124,7 @@
               <ul class="mb-10 flex flex-wrap items-center justify-center">
                 <li>
                   <a
-                    href=""
+                    href="#contact"
                     class="inline-flex items-center justify-center rounded-lg bg-white py-4 px-6 text-center text-base font-medium text-dark transition duration-300 ease-in-out hover:text-primary hover:shadow-lg sm:px-10"
                   >
                     Get Started
@@ -1335,35 +1335,6 @@
         </div>
         <div class="-mx-4 flex flex-wrap">
           <div class="w-full px-4 md:w-1/2 lg:w-1/4">
-            <div class="wow fadeInUp group mb-12 bg-white" data-wow-delay=".1s">
-              <div
-                class="relative z-10 mb-8 flex h-[70px] w-[70px] items-center justify-center rounded-2xl bg-primary"
-              >
-                <span
-                  class="absolute top-0 left-0 z-[-1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-2xl bg-primary bg-opacity-20 duration-300 group-hover:rotate-45"
-                ></span>
-                <svg
-                  width="35"
-                  height="35"
-                  viewBox="0 0 52 52"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M44.9313 11.7H38.9188C40.5438 10.9687 41.7626 9.99374 42.2501 8.69374C42.9001 6.98749 42.2501 5.19999 40.3001 3.33124C38.1876 1.29999 35.9938 0.568738 33.8001 1.13749C29.9813 2.11249 27.4626 7.06874 26.2438 9.99374C25.1063 7.06874 22.5876 2.11249 18.6876 1.13749C16.4938 0.568738 14.3001 1.29999 12.1876 3.33124C10.2376 5.19999 9.5876 6.98749 10.2376 8.69374C10.7251 9.99374 12.0251 10.9687 13.5688 11.7H7.06885C5.0376 11.7 3.4126 13.325 3.4126 15.3562V21.5312C3.4126 23.5625 5.0376 25.1875 7.06885 25.1875H7.71885V46.2312C7.71885 48.8312 9.83135 51.025 12.5126 51.025H40.1376C42.7376 51.025 44.9313 48.9125 44.9313 46.2312V25.1875C46.9626 25.1875 48.5876 23.5625 48.5876 21.5312V15.3562C48.5063 13.325 46.8813 11.7 44.9313 11.7ZM34.5313 3.98124C34.7751 3.89999 35.0188 3.89999 35.1813 3.89999C36.1563 3.89999 37.2126 4.38749 38.2688 5.52499C38.7563 6.01249 39.8126 7.06874 39.5688 7.79999C39.0001 9.34374 33.9626 10.6437 28.9251 11.05C30.0626 8.36874 32.1751 4.54999 34.5313 3.98124ZM13.0001 7.71874C12.7563 6.98749 13.8126 5.93124 14.3001 5.44374C15.4376 4.38749 16.4126 3.81874 17.3876 3.81874C17.6313 3.81874 17.8751 3.81874 18.0376 3.89999C20.4751 4.54999 22.5063 8.28749 23.6438 10.9687C18.6063 10.5625 13.5688 9.26249 13.0001 7.71874ZM42.0063 46.2312C42.0063 47.2875 41.1126 48.1812 40.0563 48.1812H12.4313C11.3751 48.1812 10.4813 47.2875 10.4813 46.2312V25.1875H41.9251V46.2312H42.0063ZM45.6626 21.5312C45.6626 22.0187 45.3376 22.3437 44.8501 22.3437H7.06885C6.6626 22.3437 6.25635 22.0187 6.25635 21.5312V15.3562C6.25635 14.95 6.6626 14.5437 7.06885 14.5437H44.8501C45.2563 14.5437 45.6626 14.8687 45.6626 15.3562V21.5312Z"
-                    fill="white"
-                  />
-                </svg>
-              </div>
-              <h4 class="mb-3 text-xl font-bold text-dark">
-                Interactive UI
-              </h4>
-              <p class="mb-8 text-body-color lg:mb-11">
-                Build your workflows like never before with our interactive drag and drop UI.
-              </p>
-            </div>
-          </div>
-          <div class="w-full px-4 md:w-1/2 lg:w-1/4">
             <div
               class="wow fadeInUp group mb-12 bg-white"
               data-wow-delay=".15s"
@@ -1403,30 +1374,19 @@
                 <span
                   class="absolute top-0 left-0 z-[-1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-2xl bg-primary bg-opacity-20 duration-300 group-hover:rotate-45"
                 ></span>
-                <svg
-                  width="35"
-                  height="35"
-                  viewBox="0 0 35 35"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M10.7734 14.3281H3.82813C2.07813 14.3281 0.65625 12.9062 0.65625 11.1562V4.21094C0.65625 2.46094 2.07813 1.03906 3.82813 1.03906H10.7734C12.5234 1.03906 13.9453 2.46094 13.9453 4.21094V11.1562C13.9453 12.9062 12.5234 14.3281 10.7734 14.3281ZM3.82813 2.95312C3.17188 2.95312 2.57031 3.5 2.57031 4.21094V11.1562C2.57031 11.8125 3.11719 12.4141 3.82813 12.4141H10.7734C11.4297 12.4141 12.0313 11.8672 12.0313 11.1562V4.21094C12.0313 3.55469 11.4844 2.95312 10.7734 2.95312H3.82813Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M31.1719 14.3281H24.2266C22.4766 14.3281 21.0547 12.9062 21.0547 11.1562V4.21094C21.0547 2.46094 22.4766 1.03906 24.2266 1.03906H31.1719C32.9219 1.03906 34.3438 2.46094 34.3438 4.21094V11.1562C34.3438 12.9062 32.9219 14.3281 31.1719 14.3281ZM24.2266 2.95312C23.5703 2.95312 22.9688 3.5 22.9688 4.21094V11.1562C22.9688 11.8125 23.5156 12.4141 24.2266 12.4141H31.1719C31.8281 12.4141 32.4297 11.8672 32.4297 11.1562V4.21094C32.4297 3.55469 31.8828 2.95312 31.1719 2.95312H24.2266Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M10.7734 33.9609H3.82813C2.07813 33.9609 0.65625 32.5391 0.65625 30.7891V23.8438C0.65625 22.0938 2.07813 20.6719 3.82813 20.6719H10.7734C12.5234 20.6719 13.9453 22.0938 13.9453 23.8438V30.7891C13.9453 32.5391 12.5234 33.9609 10.7734 33.9609ZM3.82813 22.5859C3.17188 22.5859 2.57031 23.1328 2.57031 23.8438V30.7891C2.57031 31.4453 3.11719 32.0469 3.82813 32.0469H10.7734C11.4297 32.0469 12.0313 31.5 12.0313 30.7891V23.8438C12.0313 23.1875 11.4844 22.5859 10.7734 22.5859H3.82813Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M31.1719 33.9609H24.2266C22.4766 33.9609 21.0547 32.5391 21.0547 30.7891V23.8438C21.0547 22.0938 22.4766 20.6719 24.2266 20.6719H31.1719C32.9219 20.6719 34.3438 22.0938 34.3438 23.8438V30.7891C34.3438 32.5391 32.9219 33.9609 31.1719 33.9609ZM24.2266 22.5859C23.5703 22.5859 22.9688 23.1328 22.9688 23.8438V30.7891C22.9688 31.4453 23.5156 32.0469 24.2266 32.0469H31.1719C31.8281 32.0469 32.4297 31.5 32.4297 30.7891V23.8438C32.4297 23.1875 31.8828 22.5859 31.1719 22.5859H24.2266Z"
-                    fill="white"
-                  />
-                </svg>
+                <?xml version="1.0" encoding="utf-8"?>
+                <svg fill="#1C2033" width="35" height="35" version="1.1" id="lni_lni-protection" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                     y="0px" viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+<g>
+	<path d="M53.6,7.5L33.3,1.9c-0.8-0.2-1.7-0.2-2.5,0L10.4,7.5C8.3,8.1,6.8,10,6.8,12.2V27c0,15.5,9.2,29.2,23.4,34.9
+		c0.6,0.2,1.2,0.4,1.8,0.4s1.2-0.1,1.8-0.4c14.2-5.7,23.4-19.5,23.4-35V12.2C57.2,10,55.7,8.1,53.6,7.5z M52.7,26.9
+		c0,13.4-8.3,25.8-20.5,30.8c-0.1,0-0.2,0-0.3,0C19.4,52.7,11.3,40.6,11.3,27V12.2c0-0.1,0.1-0.3,0.2-0.3l20.4-5.6c0,0,0.1,0,0.1,0
+		c0,0,0,0,0.1,0l20.4,5.6c0.1,0,0.2,0.2,0.2,0.3V26.9z" fill="white"/>
+  <path d="M43.3,22.6L29.5,34.2L23.3,29c-1-0.8-2.4-0.7-3.2,0.3c-0.8,1-0.7,2.4,0.3,3.2l7.6,6.4c0.4,0.4,0.9,0.5,1.4,0.5
+		s1-0.2,1.4-0.5L46.2,26c1-0.8,1.1-2.2,0.3-3.2C45.7,21.9,44.2,21.8,43.3,22.6z" fill="white"/>
+</g>
+</svg>
+
               </div>
               <h4 class="mb-3 text-xl font-bold text-dark">
                 Manage Secrets
@@ -1461,10 +1421,39 @@
                 </svg>
               </div>
               <h4 class="mb-3 text-xl font-bold text-dark">
-                Kube Friendly
+                Kubernetes Ready
               </h4>
               <p class="mb-8 text-body-color lg:mb-11">
                 Scale and automate your deployment in Kubernetes.
+              </p>
+            </div>
+          </div>
+          <div class="w-full px-4 md:w-1/2 lg:w-1/4">
+            <div class="wow fadeInUp group mb-12 bg-white" data-wow-delay=".1s">
+              <div
+                      class="relative z-10 mb-8 flex h-[70px] w-[70px] items-center justify-center rounded-2xl bg-primary"
+              >
+                <span
+                        class="absolute top-0 left-0 z-[-1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-2xl bg-primary bg-opacity-20 duration-300 group-hover:rotate-45"
+                ></span>
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 22.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg fill="#1C2033" width="35" height="35" version="1.1" id="lni_lni-database" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                     y="0px" viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+<path d="M32,1.8c-11.7,0-20.9,5.5-20.9,12.4v35.6c0,6.9,9.4,12.4,20.8,12.4c11.5,0,20.9-5.6,20.9-12.4V14.2
+	C52.9,7.2,43.7,1.8,32,1.8z M32,6.3c9.6,0,16.4,4.2,16.4,7.9c0,3.8-6.7,7.9-16.4,7.9s-16.4-4.2-16.4-7.9C15.6,10.4,22.4,6.3,32,6.3z
+	 M32,57.8c-9.4,0-16.3-4.2-16.3-7.9V46c3.8,2.8,9.6,4.5,16.3,4.5c6.7,0,12.6-1.8,16.4-4.5v3.9C48.4,53.6,41.4,57.8,32,57.8z M32,46
+	c-9.6,0-16.3-4-16.3-7.6v-4.6c3.9,2.8,10,4.5,16.3,4.5c6.6,0,12.5-1.7,16.4-4.5v4.6C48.4,42,41.6,46,32,46z M45.8,30.1
+	c-3.1,2.3-8.2,3.7-13.8,3.7c-5.5,0-10.7-1.4-13.8-3.7c-1.2-0.8-2.5-2.2-2.5-3.9V22c3.8,2.8,9.7,4.6,16.4,4.6
+	c6.7,0,12.6-1.8,16.4-4.6v4.2C48.4,27.8,47,29.2,45.8,30.1z" fill="white"/>
+</svg>
+
+              </div>
+              <h4 class="mb-3 text-xl font-bold text-dark">
+                Deploy as needed
+              </h4>
+              <p class="mb-8 text-body-color lg:mb-11">
+                Deploy Harmos wherever and whenever! You can run us on-prem, we can manage it for you on your infrastructure with VPC peering or you can run our fully managed service on AWS, GCP, or Azure.
               </p>
             </div>
           </div>
@@ -1510,8 +1499,8 @@
     </section>
     <!-- ====== About Section End -->
 
-    <!-- ====== Pricing Section Start -->
-    <section id="pricing"
+    <!-- ====== FAQ Section Start -->
+    <section id="faq"
       class="relative z-20 overflow-hidden bg-[#f3f4ff] pt-20 pb-12 lg:pt-[120px] lg:pb-[90px]"
     >
       <div class="container">
@@ -1519,18 +1508,13 @@
           <div class="w-full px-4">
             <div class="mx-auto mb-[60px] max-w-[620px] text-center lg:mb-20">
               <span class="mb-2 block text-lg font-semibold text-primary">
-                Pricing
+                FAQ
               </span>
               <h2
                 class="mb-4 text-3xl font-bold text-dark sm:text-4xl md:text-[42px]"
               >
-                Cloud Pricing Plans
+                Frequently Asked Questions
               </h2>
-              <p
-                class="text-lg leading-relaxed text-body-color sm:text-xl sm:leading-relaxed"
-              >
-                Choose from our flexible pricing plans to find the perfect fit for your needs.
-              </p>
             </div>
           </div>
         </div>
@@ -1915,6 +1899,7 @@
                     >Full Name*</label
                   >
                   <input
+                          id="fullName"
                     type="text"
                     name="fullName"
                     placeholder="Adam Gelius"
@@ -1926,6 +1911,7 @@
                     >Email*</label
                   >
                   <input
+                          id="email"
                     type="email"
                     name="email"
                     placeholder="example@yourmail.com"
@@ -1937,6 +1923,7 @@
                     >Phone*</label
                   >
                   <input
+                          id="phone"
                     type="text"
                     name="phone"
                     placeholder="+885 1254 5211 552"
@@ -1948,6 +1935,7 @@
                     >Message*</label
                   >
                   <textarea
+                          id="message"
                     name="message"
                     rows="1"
                     placeholder="type your message here"
@@ -1972,10 +1960,10 @@
 
     <!-- ====== Footer Section Start -->
     <footer
-      class="wow fadeInUp relative z-10 bg-black pt-20 lg:pt-[120px]"
+      class="wow fadeInUp relative z-10 lg:pt-[120px]"
       data-wow-delay=".15s"
     >
-      <div class="mt-12 border-t border-opacity-40 py-8 lg:mt-[60px]">
+      <div class="mt-12 bg-black border-t border-opacity-40 py-8 lg:mt-[60px]">
         <div class="container">
           <div class="-mx-4 flex flex-wrap">
             <div class="w-full px-4 md:w-2/3 lg:w-1/2">
@@ -1984,19 +1972,19 @@
                   class="-mx-3 flex items-center justify-center md:justify-start"
                 >
                   <a
-                    href="javascript:void(0)"
+                    href="privacy-policy.html"
                     class="px-3 text-base text-[#f3f4fe] hover:text-primary"
                   >
                     Privacy policy
                   </a>
                   <a
-                    href="javascript:void(0)"
+                    href="legal-notice.html"
                     class="px-3 text-base text-[#f3f4fe] hover:text-primary"
                   >
                     Legal notice
                   </a>
                   <a
-                    href="javascript:void(0)"
+                    href="terms-of-service.html"
                     class="px-3 text-base text-[#f3f4fe] hover:text-primary"
                   >
                     Terms of service
