--- a/index.html
+++ b/index.html
@@ -1501,7 +1501,7 @@
 
     <!-- ====== FAQ Section Start -->
     <section id="faq"
-      class="relative z-20 overflow-hidden bg-[#f3f4ff] pt-20 pb-12 lg:pt-[120px] lg:pb-[90px]"
+      class="relative z-20 overflow-hidden bg-[#f3f4ff] pb-12 lg:pb-[90px]"
     >
       <div class="container">
         <div class="-mx-4 flex flex-wrap">
