--- a/404.html
+++ b/404.html
@@ -58,7 +58,7 @@
                 <ul class="blcok lg:flex">
                   <li class="group relative">
                     <a
-                            href="#home"
+                            href="index.html#home"
                             class="ud-menu-scroll mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:mr-0 lg:inline-flex lg:py-6 lg:px-0 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70"
                     >
                       Home
@@ -66,7 +66,7 @@
                   </li>
                   <li class="group relative">
                     <a
-                            href="#about"
+                            href="index.html#about"
                             class="ud-menu-scroll mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:mr-0 lg:ml-7 lg:inline-flex lg:py-6 lg:px-0 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-12"
                     >
                       About
@@ -74,7 +74,7 @@
                   </li>
                   <li class="group relative">
                     <a
-                            href="#faq"
+                            href="index.html#faq"
                             class="ud-menu-scroll mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:mr-0 lg:ml-7 lg:inline-flex lg:py-6 lg:px-0 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-12"
                     >
                       FAQ
@@ -82,7 +82,7 @@
                   </li>
                   <li class="group relative">
                     <a
-                            href="#contact"
+                            href="index.html#contact"
                             class="ud-menu-scroll mx-8 flex py-2 text-base text-dark group-hover:text-primary lg:mr-0 lg:ml-7 lg:inline-flex lg:py-6 lg:px-0 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-12"
                     >
                       Contact
