--- a/index.html
+++ b/index.html
@@ -1655,7 +1655,7 @@
               </button>
               <div class="faq-content hidden pl-[62px]">
                 <p class="py-3 text-base leading-relaxed text-body-color">
-                  We offer a dedicated playground as well as test instances depending on your needs for full evaluation.
+                  We offer dedicated test instances depending on your needs for full evaluation.
                 </p>
               </div>
             </div>
@@ -1890,67 +1890,14 @@
               data-wow-delay=".2s
               "
             >
-              <h3 class="mb-8 text-2xl font-semibold md:text-[26px]">
-                Send us a Message
-              </h3>
-              <form>
-                <div class="mb-6">
-                  <label for="fullName" class="block text-xs text-dark"
-                    >Full Name*</label
-                  >
-                  <input
-                          id="fullName"
-                    type="text"
-                    name="fullName"
-                    placeholder="Adam Gelius"
-                    class="w-full border-0 border-b border-[#f1f1f1] py-4 focus:border-primary focus:outline-none"
-                  />
-                </div>
-                <div class="mb-6">
-                  <label for="email" class="block text-xs text-dark"
-                    >Email*</label
-                  >
-                  <input
-                          id="email"
-                    type="email"
-                    name="email"
-                    placeholder="example@yourmail.com"
-                    class="w-full border-0 border-b border-[#f1f1f1] py-4 focus:border-primary focus:outline-none"
-                  />
-                </div>
-                <div class="mb-6">
-                  <label for="phone" class="block text-xs text-dark"
-                    >Phone*</label
-                  >
-                  <input
-                          id="phone"
-                    type="text"
-                    name="phone"
-                    placeholder="+885 1254 5211 552"
-                    class="w-full border-0 border-b border-[#f1f1f1] py-4 focus:border-primary focus:outline-none"
-                  />
-                </div>
-                <div class="mb-6">
-                  <label for="message" class="block text-xs text-dark"
-                    >Message*</label
-                  >
-                  <textarea
-                          id="message"
-                    name="message"
-                    rows="1"
-                    placeholder="type your message here"
-                    class="w-full resize-none border-0 border-b border-[#f1f1f1] py-4 focus:border-primary focus:outline-none"
-                  ></textarea>
-                </div>
-                <div class="mb-0">
-                  <button
-                    type="submit"
-                    class="inline-flex items-center justify-center rounded bg-primary py-4 px-6 text-base font-medium text-white transition duration-300 ease-in-out hover:bg-dark"
-                  >
-                    Send Message
-                  </button>
-                </div>
-              </form>
+              <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
+              <script>
+                hbspt.forms.create({
+                  region: "na1",
+                  portalId: "24395817",
+                  formId: "17825c25-4ce4-48ef-8c9b-0a4167c93c11"
+                });
+              </script>
             </div>
           </div>
         </div>
@@ -1963,7 +1910,7 @@
       class="wow fadeInUp relative z-10 lg:pt-[120px]"
       data-wow-delay=".15s"
     >
-      <div class="mt-12 bg-black border-t border-opacity-40 py-8 lg:mt-[60px]">
+      <div class="bg-black border-t border-opacity-40 py-8 lg:mt-[60px]">
         <div class="container">
           <div class="-mx-4 flex flex-wrap">
             <div class="w-full px-4 md:w-2/3 lg:w-1/2">
