--- a/index.html
+++ b/index.html
@@ -2002,5 +2002,13 @@
 
       window.document.addEventListener("scroll", onScroll);
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RBK9S3560X"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-RBK9S3560X');
+    </script>
   </body>
 </html>
