--- a/index.html
+++ b/index.html
@@ -1328,7 +1328,7 @@
               <p
                 class="text-lg leading-relaxed text-body-color sm:text-xl sm:leading-relaxed"
               >
-                Run it on premise or fully managed on your infrastructure. You can also leverage our service on any major public cloud including AWS GovCloud.
+                Run it on premise, fully managed on our infrastructure, or we can manage it on your infrastructure (VPC Peering) . You can also leverage our service on any major public cloud including AWS GovCloud.
               </p>
             </div>
           </div>
@@ -1619,7 +1619,7 @@
               </button>
               <div class="faq-content hidden pl-[62px]">
                 <p class="py-3 text-base leading-relaxed text-body-color">
-                  You can cancel your Harmos subscription at any time.
+                  The cancellation policy depends on the subscription choice you select: monthly vs annual
                 </p>
               </div>
             </div>
