corrected logo and favicon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </title>
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.png"
+      href="assets/images/favicon-bk.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="assets/css/animate.css" />
@@ -31,7 +31,7 @@
           <div class="w-60 max-w-full px-4">
             <a href="index.html" class="navbar-logo block w-full py-5">
               <img
-                src="assets/images/logo/harmos-logo.webp"
+                src="assets/images/logo/harmos-logo-white.png"
                 alt="logo"
                 class="header-logo w-full"
               />
@@ -1821,13 +1821,6 @@
                 <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
                   <img
                           src="assets/images/brands/tmobile.png"
-                          alt="American Express"
-                          class="grayscale duration-300 hover:filter-none"
-                  />
-                </div>
-                <div class="ud-single-logo mr-10 mb-5 max-w-[140px]">
-                  <img
-                          src="assets/images/brands/github.png"
                           alt="American Express"
                           class="grayscale duration-300 hover:filter-none"
                   />
