--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/tailwind.css" />
+    <link rel="canonical" href="https://www.harmos.io">
 
     <!-- ==== WOW JS ==== -->
     <script src="assets/js/wow.min.js"></script>
