added healthcheck text

--- a/index.html
+++ b/index.html
@@ -1481,15 +1481,15 @@
                   <span
                     class="mb-5 inline-block bg-primary py-2 px-5 text-sm font-medium text-white"
                   >
-                    Our Mission
+                    Technical Support
                   </span>
                   <h2
                     class="mb-6 text-3xl font-bold text-dark sm:text-4xl sm:leading-snug 2xl:text-[40px]"
                   >
-                    Democratizing Netflix Conductor
+                    Just need support?
                   </h2>
                   <p class="mb-9 text-base leading-relaxed text-body-color">
-                    At our core, we believe that Netflix Conductor is a powerful tool that should be available to all. That's why we're simplifying the platform and ensuring pricing transparency. With a team of dedicated developers, including core maintainers, we're committed to making Conductor accessible to everyone.
+                    Navigate the complexities of Netflix Conductor confidently with our dedicated technical assistance. Don't be left in the dark—our expert team, comprising core maintainers of Netflix Conductor, is here to ensure seamless operation and quick troubleshooting. Empower your workflows and unlock the full potential of Conductor with our dedicated support.
                   </p>
                 </div>
               </div>
@@ -1845,11 +1845,14 @@
             <div class="ud-contact-content-wrapper">
               <div class="ud-contact-title mb-12 lg:mb-[150px]">
                 <span class="mb-5 text-base font-semibold text-dark">
-                  CONTACT US
+                   Free Conductor Health Check
                 </span>
-                <h2 class="text-[35px] font-semibold">
-                  We’re here to help!
-                </h2>
+                <p class="text-base leading-relaxed text-body-color">
+                  Optimize your Netflix Conductor experience with our complimentary conductor health check!
+                </p>
+                <p class="text-base leading-relaxed text-body-color">
+                  Fill out the web form and we will get in touch.
+                </p>
               </div>
               <div class="mb-12 flex flex-wrap justify-between lg:mb-0">
                 <div class="mb-8 flex w-[330px] max-w-full">
